feat: Modify developer pages style
feat: Add page top nav link

--- a/src/components/Layout/CreateResource/index.scss
+++ b/src/components/Layout/CreateResource/index.scss
@@ -6,13 +6,15 @@
 
   .main {
     .card {
-      padding: 32px 32px 0 32px;
+      //padding: 32px 32px 0 32px;
+      padding: 32px 24px 0 24px;
       border-radius: 0;
       box-shadow: none;
     }
 
     .title{
-      padding: 20px 32px;
+      //padding: 20px 32px;
+      padding: 20px 24px;
       line-height: 24px;
       font-size: 20px;
       font-weight: 500;
