--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -11,9 +11,10 @@
   }
 
   &.hasMenu{
-    margin: 68px 20px 32px $menu-width+20px;
+    margin: 56px 20px 32px $menu-width+20px;
     width: calc(100% - #{$menu-width} - 40px);
-    min-width:calc(#{$content-width} - #{$menu-width} - 40px);
+    //min-width:calc(#{$content-width} - #{$menu-width} - 40px);
+    min-width: 900px;
     min-height: calc(100vh - 100px);
     padding-top: 0;
   }
