--- a/src/components/Rectangle/AppImages/index.scss
+++ b/src/components/Rectangle/AppImages/index.scss
@@ -2,8 +2,9 @@
 
 .appImages {
   .name{
+    margin-bottom: 4px;
     font-size: 12px;
-    line-height: 2.0;
+    line-height: 24px;
     color: $grey-word;
   }
   .images{
