--- a/src/pages/Admin/Clusters/Detail/index.scss
+++ b/src/pages/Admin/Clusters/Detail/index.scss
@@ -1,10 +1,7 @@
 @import '~scss/vars';
 
-.total{
-  padding-top: 16px;
-  font-size: 14px;
-  line-height: 2.0;
-  color: $N500;
+.clusterDetail {
+  min-width: 1000px !important;
 }
 
 .activities{
