--- a/src/components/Menu/index.scss
+++ b/src/components/Menu/index.scss
@@ -5,7 +5,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 3;
+  z-index: 4;
   width: $menu-width;
 
   .nav{
@@ -47,19 +47,18 @@
   .app{
     margin: 0 24px 12px;
 
-    >span{
+    >a{
       display: inline-block;
       height: 32px;
-      opacity: 0.5;
+      //opacity: 0.5;
       border-radius: 2px;
-      background-color: $N400;
+      background-color: rgba($N400, 0.5);
       text-align: center;
       cursor: pointer;
     }
 
     .plus{
       width: 104px;
-
     }
 
     .more{
@@ -70,11 +69,10 @@
     :global{
       .icon{
         margin: 8px 0;
-        svg{
-          --primary-color: rgba($N0, 1);
-          --secondary-color: rgba($N0, 1);
-          opacity: 0.9;
-        }
+        /*svg{
+          --primary-color: rgba($N0, 0.9);
+          --secondary-color: rgba($N0, 0.9);
+        }*/
       }
     }
   }
@@ -115,9 +113,11 @@
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 2;
-  height: 48px;
+  z-index: 3;
   width: 100%;
+ /* position: static;
+  margin: -68px -20px 20px;*/
+  height: 48px;
   background-color: $background-color;
 
   .user [class*='target']{
