--- a/src/pages/Admin/Categories/Detail/index.scss
+++ b/src/pages/Admin/Categories/Detail/index.scss
@@ -1,31 +1,6 @@
 @import '~scss/vars';
 
-.inputItem{
-  margin-bottom: 20px;
-  .name{
-    display: inline-block;
-    margin-right:  20px;
-    width: 100px;
-    text-align: right;
-  }
-  .input{
-    width: 400px;
-  }
-  .textarea{
-    padding: 7px 10px;
-    width: 400px;
-    height: 100px;
-    border-radius: 2px;
-    border: 1px solid $N30;
-    outline: none;
-    resize: none;
-    &:focus{
-      border: 1px solid $P75;
-    }
-  }
-  .textareaName{
-    position: relative;
-    bottom: 80px;
-  }
+.categoryDetail {
+  width: 950 !important;
 }
 
