--- a/src/pages/Admin/Overview/Panel/index.scss
+++ b/src/pages/Admin/Overview/Panel/index.scss
@@ -3,7 +3,7 @@
 .panel {
   box-sizing: border-box;
   height: 412px;
-  padding: 20px 24px;
+  padding: 20px;
   overflow: hidden;
   border-radius: 2px;
   background-color: $N0;
