--- a/src/pages/Admin/Categories/CategoryCard/index.scss
+++ b/src/pages/Admin/Categories/CategoryCard/index.scss
@@ -1,6 +1,6 @@
 @import "~scss/vars";
 
-.rectangle {
+.categoryCard {
   box-sizing: border-box;
   padding: 24px;
   height: 240px;
@@ -15,25 +15,26 @@
   }
   .title a{
     display: block;
-    margin-bottom: 4px;
+    margin-bottom: 10px;
     font-size: 20px;
+    line-height: 24px;
     font-weight: 500;
-    line-height: 32px;
     color: $N500;
-    max-width: 300px;
+    max-width: calc(100% - 40px);
     @include textCut;
   }
   .idShow{
-    margin-bottom: 17px;
+    margin-bottom: 18px;
     line-height: 14px;
     font-size: 12px;
     color: $N75;
   }
   .description{
-    height: 85px;
+    margin-bottom: 16px;
+    height: 60px;
     font-size: 12px;
-    line-height: 17px;
-    color: $N75;
+    line-height: 20px;
+    color: $N100;
     overflow: hidden;
     word-wrap: break-word;
     word-break: break-all;
