feat: Create app page integrate API
feat: Create and audit app version integrate API

--- a/src/pages/Admin/Apps/Add/index.scss
+++ b/src/pages/Admin/Apps/Add/index.scss
@@ -1,31 +1,35 @@
-@import "~scss/vars";
+@import '~scss/vars';
 
 @mixin load-frames() {
   0% {
-    -webkit-transform:rotate(0deg);
-    transform:rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-    -webkit-transform:rotate(360deg);
-    transform:rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
-@-webkit-keyframes load {@include load-frames;}
-@keyframes load {@include load-frames;}
+@-webkit-keyframes load {
+  @include load-frames;
+}
+@keyframes load {
+  @include load-frames;
+}
 
-.createApp{
+.createApp {
   background: $background-color;
   min-width: 744px;
   min-height: calc(100vh - 100px);
 
-  .operate{
+  .operate {
     position: fixed;
     top: 20px;
     left: 20px;
     right: 20px;
     height: 20px;
 
-    >label{
+    > label {
       display: inline-block;
       font-size: 12px;
       line-height: 20px;
@@ -35,15 +39,15 @@
   }
 }
 
-.createVersion{
-  .stepName{
+.createVersion {
+  .stepName {
     margin-bottom: 4px;
     font-size: 14px;
     line-height: 24px;
     color: $N300;
   }
 
-  .stepExplain{
+  .stepExplain {
     margin-bottom: 40px;
     font-size: 24px;
     font-weight: 500;
@@ -52,7 +56,7 @@
     color: $N500;
   }
 
-  .stepOperate{
+  .stepOperate {
     display: inline-block;
     margin: 60px 0 0;
     font-size: 14px;
@@ -60,13 +64,13 @@
     text-align: center;
     color: $P75;
     cursor: pointer;
-    &.noClick{
+    &.noClick {
       opacity: 0.5;
       cursor: not-allowed;
     }
   }
 
-  .upload{
+  .upload {
     position: relative;
     display: inline-block;
     box-sizing: border-box;
@@ -80,58 +84,62 @@
     text-align: left;
     cursor: pointer;
 
-    .word{
+    .word {
       margin-bottom: 4px;
       font-size: 14px;
       line-height: 24px;
       color: $N300;
     }
 
-    .note{
+    .note {
       font-size: 12px;
       line-height: 20px;
       color: $N100;
     }
 
-    :global{
-      .icon{
+    :global {
+      .icon {
         float: left;
         margin-right: 12px;
       }
     }
   }
 
-  .uploading{
+  .uploading {
     opacity: 0.3;
     cursor: not-allowed;
-    .loading{
+
+    .loading {
       position: absolute;
       top: 28px;
       left: 244px;
       z-index: 2;
       width: 64px;
       height: 64px;
-      border-radius:50%;
+      border-radius: 50%;
+
       &:after {
         width: 64px;
         height: 64px;
-        border-radius:50%;
+        border-radius: 50%;
       }
+
       border-top: 2px solid $P300;
-      border-right: 2px solid  $P300;
+      border-right: 2px solid $P300;
       border-bottom: 2px solid $P10;
       border-left: 2px solid $P10;
-      animation:load 1s infinite linear;
+      animation: load 1s infinite linear;
       opacity: 3.33;
     }
   }
 
-  .errorNote{
+  .errorNote {
     display: inline-block;
+    position: relative;
     box-sizing: border-box;
     width: 552px;
-    height: 40px;
-    padding: 7px 15px;
+    //height: 40px;
+    padding: 7px 15px 7px 44px;
     font-size: 14px;
     line-height: 24px;
     color: $R300;
@@ -141,10 +149,13 @@
     border: solid 1px $R45;
     text-align: left;
 
-    :global{
-      .icon{
-        float: left;
-        margin-right: 12px;
+    :global {
+      .icon {
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        transform: translateY(-50%);
+
         svg {
           --primary-color: #{$N0};
           --secondary-color: #{$R300};
@@ -153,15 +164,17 @@
     }
   }
 
-  .checkImg{
+  .checkImg {
     margin: 48px 0 40px;
-    >label{
+
+    > label {
       display: inline-block;
       width: 48px;
       height: 48px;
       border-radius: 50%;
       background-color: $G300;
-      :global{
+
+      :global {
         svg {
           --primary-color: #{$N0};
           --secondary-color: #{$N0};
@@ -170,19 +183,21 @@
     }
   }
 
-  .operateBtn{
+  .operateBtn {
     margin-bottom: 12px;
-    button{
+
+    button {
       margin: 0 6px;
     }
   }
 
-  .operateWord{
+  .operateWord {
     margin-bottom: 16px;
     font-size: 12px;
     line-height: 20px;
     color: $N100;
-    .link{
+
+    .link {
       color: $P75;
       cursor: pointer;
     }
