feat: Add authority for app version operate

--- a/src/pages/Admin/Apps/Add/index.scss
+++ b/src/pages/Admin/Apps/Add/index.scss
@@ -36,6 +36,12 @@
       color: $N100;
       cursor: pointer;
     }
+
+    :global {
+      .icon{
+        margin-right: 4px;
+      }
+    }
   }
 }
 
