--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -156,4 +156,10 @@
       border-color: $P75;
     }
   }
+
+  textarea[disabled]{
+    opacity: 0.5;
+    cursor: not-allowed;
+    pointer-events: none;
+  }
 }
